--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 springfox.documentation.swagger.v2.path=/api-docs
-server.contextPath=/nhisyamj/cardio_challenge/1.0.0
+server.servlet.context-path=/nhisyamj/cardio_challenge/1.0.0
 server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
