--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ server.servlet.context-path=/nhisyamj/cardio_challenge/1.0.0
 server.port=8080
 spring.jackson.date-format=io.swagger.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/cardio_challenge?autoReconnect=true&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=Asia/Kuala_Lumpur
+spring.datasource.username=root
+spring.datasource.password=root@123
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.minimum-idle=10
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.idle-timeout=300000
+spring.jpa.hibernate.ddl-auto=create-drop
